# frotas-saas

./: .gitignore  DOCUMENTAÇÃO FROTAS.txt  tabelas.txt
backend/: .gitignore  .pre-commit-config.yaml  README.MD  TODO.md  docker-compose.yml  pyproject.toml
backend/apps/anexos/models/: __init__.py  anexo.py
backend/apps/auditoria/models/: __init__.py  auditoria.py
backend/apps/core/models/: __init__.py  base.py
backend/apps/core/permissions/: tenant.py
backend/apps/core/tenancy/: context.py  middleware.py
backend/apps/financeiro/models/: __init__.py  abastecimento.py  despesa.py  manutencao.py
backend/apps/frota/models/: __init__.py  fornecedor.py  motorista.py  veiculo.py
backend/apps/operacao/models/: __init__.py  reserva.py  viagem.py
backend/apps/tenants/: admin.py  models_legacy.py  serializers.py  views.py
backend/apps/tenants/api/: serializers.py  urls.py  views.py
backend/apps/tenants/models/: __init__.py  empresa.py
backend/apps/usuarios/: admin.py
backend/apps/usuarios/api/: serializers.py  urls.py  views.py
backend/apps/usuarios/models/: __init__.py  perfil.py  usuario.py  usuario_perfil.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py
backend/tenants/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tenants/migrations/: 0001_initial.py
backend/tenants/models/: __init__.py  abastecimento.py  anexo.py  auditoria.py  base.py  despesa.py  empresa.py  fornecedor.py  manutencao.py  motorista.py  perfil.py  reserva.py  usuario.py  usuario_perfil.py  veiculo.py  viagem.py
(+2 files in other folders)
